# vectoria

./: .dockerignore  .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  Cookfile  DECISIONS.md  Dockerfile  Makefile  PROJECT.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.project/: PROJECT.md
Formula/: vectoria.rb
deploy/: DEPLOY.md  deploy.sh  docker-compose.algolia-override.yml  docker-compose.prod.yml  docker-compose.saas.yml  setup.sh
deploy/nginx/: vectoriasearch.com
docs/: api.md  deploy-saas.md  full_prd.md  prod.md  prod1.md  quickstart.md
examples/admin-panel/: vectoria-admin.html
examples/saas-console/: NOTES.md  admin.html  api-guide.html  index.html  serve.sh  tenant-detail.html  tenant.html
examples/saas-console/css/: console.css
examples/saas-console/js/: api.js  config.js  nav.js  upload.js
examples/webstore/: index.html  setup.sh
scripts/: admin-demo.sh  wands_import.py  wands_judges.py
search-widget/: README.md  package.json  vectoria-search.js
vectoria-cli/: Cargo.toml
vectoria-cli/examples/: esci_import.rs
vectoria-cli/src/: main.rs
vectoria-cli/src/commands/: bench.rs  esci.rs  eval.rs  import.rs  mod.rs  reindex.rs
vectoria-core/: Cargo.toml
vectoria-core/src/: engine.rs  lib.rs
vectoria-core/src/aggregation/: mod.rs
vectoria-core/src/embedding/: cache.rs  local.rs  mod.rs  openai.rs
vectoria-core/src/model/: mod.rs
vectoria-core/src/search/: bm25_index.rs  clustering.rs  llm_rewriter.rs  mod.rs  query_cache.rs  reranker.rs  scoring.rs  spell.rs
vectoria-core/src/storage/: edgestore.rs  memory.rs  mod.rs  sqlite.rs
vectoria-core/src/vector/: edgestore.rs  memory.rs  mod.rs  turbovec.rs
vectoria-core/tests/: cache_embedding_test.rs  edgestore_integration.rs  engine_builder_test.rs  query_cache_test.rs  search_integration.rs  spell_test.rs  sqlite_integration.rs  turbovec_integration.rs  v012_features.rs  v013_features.rs  v014_features.rs  v015_features.rs  verify_quality_gate.rs
vectoria-core/tests/common/: mod.rs
vectoria-server/: Cargo.toml
vectoria-server/src/: auth.rs  config.rs  index_registry.rs  main.rs  rate_limit.rs  state.rs  storage_factory.rs  tenants.rs
vectoria-server/src/routes/: admin.rs  events.rs  index_admin.rs  indexes.rs  mod.rs  pins.rs  products.rs  search.rs  sponsored.rs  suppressions.rs  tenants.rs  users.rs
vectoria-wasm/: Cargo.toml
vectoria-wasm/src/: lib.rs
website/: api.html  index.html  quickstart.html  search-widget.html  style.css  wasm-demo.html
