[package]
name = "vectoria-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vectoria"
path = "src/main.rs"

[dependencies]
vectoria-core = { path = "../vectoria-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
