[package]
name = "vectoria-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embedded hybrid search engine core — BM25 + vector + behavioral signals"
keywords = ["search", "vector", "bm25", "hybrid", "ecommerce"]
categories = ["database", "algorithms", "data-structures"]
readme = "../README.md"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
fastembed = { workspace = true }
edgestore = { workspace = true }
bm25 = { workspace = true }
symspell = { workspace = true }
foyer = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
tempfile = "3"
