[package]
name = "vectoria-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vectoria-server"
path = "src/main.rs"

[dependencies]
vectoria-core = { path = "../vectoria-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
dirs-next = "2"
